# alphaeye-cpp

./: .gitignore  CMakeLists.txt  README.md  main.cc
controller/: detector_controller.cc  detector_controller.h
detector/: bgs_motion_detector.cc  bgs_motion_detector.h  motion_detector.cc  motion_detector.h
io_node/: db_writer.cc  db_writer.h  video_output_node.cc  video_output_node.h
util/: util.h
